@@ -2,7 +2,8 @@
 
 	* capi/ (geostest.c, geos_c.cpp, geos_h.in): added GEOSSimplify()
 	and GEOSTopologyPreserveSimplify() interfaces.
-	Removed compiler warnings.
+	Removed compiler warnings. Had libgeos_c use default
+	GeometryFactory instance.
 	* geos/source/simplify/DouglasPeuckerSimplifier.cpp:
 	fixed bug in MultiPolygon handling of DPTransformer
 	* tests/units/io/WKBReaderTest.cpp: forced NDR output
